# Magpie

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements-deploy.txt  requirements.txt  setup.sh
.github/workflows/: ci.yml
magpie/: __init__.py  __main__.py  cli.py  config.py  exporter.py  security.py
magpie/agent/: __init__.py  adjacency.py  digest.py  orchestrator.py  query_planner.py  roadmap.py
magpie/ingest/: __init__.py  resume.py
magpie/knowledge/: __init__.py  models.py  store.py
magpie/llm/: __init__.py  base.py  factory.py  ollama_client.py  openai_compat.py
magpie/relevance/: __init__.py  embeddings.py  engine.py
magpie/scraper/: __init__.py  extractor.py
magpie/search/: __init__.py  arxiv.py  base.py  duckduckgo.py  github.py  hackernews.py  rss.py  searxng.py
magpie/summarize/: __init__.py  summarizer.py
magpie/web/: __init__.py  auth.py  ratelimit.py  server.py
scripts/: demo.py
tests/: conftest.py  test_adjacency.py  test_auth.py  test_cache_searxng.py  test_export_roadmap.py  test_history.py  test_llm.py  test_llm_logic.py  test_orchestrator.py  test_relevance.py  test_resume_ingest.py  test_signals.py  test_smoke.py  test_sources.py  test_store_postgres.py
ui/: index.html
ui/assets/: README.md
ui/css/: styles.css
ui/js/: app.js
