[project]
name = "magpie"
version = "0.1.0"
description = "Personal agentic tech-learning assistant — forages the web for relevant tech and grows with what you learn."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "trafilatura>=1.9",
    "ddgs>=6.0",
    "ollama>=0.3",
    "sentence-transformers>=3.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
magpie = "magpie.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["magpie*"]

[tool.ruff]
line-length = 100
target-version = "py311"
